# ROC_BYIP

./: .gitignore  .replit  DOCUMENTATION_INDEX.md  EXECUTIVE_SUMMARY.md  LICENSE  LOCAL_EXECUTION_REPORT.md  Makefile  README.md  RUNNING.md  USER_GUIDE.md  plans.db  pyproject.toml  pytest.ini  run_app.bat  run_app.command  test_download.py
.github/workflows/: ci.yml
.streamlit/: config.toml
DOC/: 00_START_HERE.md  ANALISE_PRODUCAO.md  ANALISE_PROPOSTA_MELHORIAS.md  ANALISE_RUN_APP.md  ARCHITECTURE.md  COMPLETION_SUMMARY.md  GETTING_STARTED_FOR_USERS.md  INDEX.md  QUICK_REFERENCE.md  RELATORIO_APLICACAO.md  SYSTEM_REPORT.md  TECHNICAL_DOCS.md  TEST_DOWNLOAD_REPORT.md  replit.md
app/: requirements.txt  streamlit_app.py
attached_assets/: Pasted-MediaFileStorageError-Error-opening-attached-assets-ciclo-inteligencia-png-Traceback-File-home-1762991429470_1762991429471.txt
backend/: plans.db  requirements.txt
backend/app/: main.py
backend/app/db/: database.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py
backend/app/services/: audit.py  backup.py  error_handler.py  lgpd.py  pdf.py
backend/scripts/: backup_manual.py  backup_scheduled.sh  restore_backup.py
tests/: __init__.py  test_api.py
