[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "httpx>=0.28.1",
    "pydantic==2.9.2",
    "python-multipart==0.0.12",
    "reportlab==4.2.5",
    "sqlalchemy==2.0.35",
    "streamlit==1.39.0",
    "uvicorn==0.30.6",
]
